--- a/deployment/mainDeployment.yml
+++ b/deployment/mainDeployment.yml
@@ -1,7 +1,7 @@
-apiVersion: v1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: deployment
+  name: application-deployment
   labels:
     app: udacity-dev-ops-capstone-project
 spec:
@@ -19,5 +19,4 @@ spec:
           image: konradcodes/udacity-dev-ops-capstone-project
           imagePullPolicy: 'Always'
           ports:
-            - name: 'http-server'
             - containerPort: 80
